--- a/game.html
+++ b/game.html
@@ -59,7 +59,7 @@
         " class="reset">Clear</button>
     </div>
     <!-- Link to Home Page -->
-    <a href="main.html">Go to Home</a>
+    <a href="index.html">Go to Home</a>
 
     <!-- Javascript -->
     <script>
