--- a/twoplayergame.html
+++ b/twoplayergame.html
@@ -112,7 +112,7 @@
         " class="reset">Clear</button>
     </div><br>
 
-    <a href="main.html">Go to Home</a><br>
+    <a href="index.html">Go to Home</a><br>
     <p onclick="
         location.reload();
     " class="newGame">Start a New Game</p>
